<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.mcgill.ecse321.project6.treeple_android.MainActivity">
    <item
        android:id="@+id/action_signup"
        android:title="@string/action_signup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_address"
        android:title="@string/add_edit_address"
        app:showAsAction="never"
        android:visible="true" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
</menu>
