<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:id="@+id/species_text"
        android:hint="@string/species_hint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/height_text"
            android:hint="@string/height_hint"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/canopy_text"
            android:hint="@string/canopy_hint" />
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/municipality_prompt"
        android:id="@+id/municipality_spinner"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/landtype_prompt"
        android:id="@+id/landtype_spinner"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location_text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_tree_button"
        android:onClick="plantTree"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plant_error"
        android:textColor="@color/colorAccent"
        android:text=""/>
</LinearLayout>