<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/street_number_field"
        android:hint="@string/street_number"
        android:inputType="number" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/street_name_field"
        android:hint="@string/street_name"
        android:inputType="textPostalAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/postal_code_field"
        android:hint="@string/postal_code"
        android:inputType="textPostalAddress"/>
</LinearLayout>