<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trees_within_distance"/>

    <Spinner
        android:id="@+id/spinner_tree_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cut_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cutDownTree"
        android:text="@string/cut_down_tree_button" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_button"
        android:text="@string/refresh_button"
        android:onClick="refreshTreeList" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:id="@+id/cut_down_error"/>

</LinearLayout>